# trackBox

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  target.cpp  target.h  trackBox.cpp  trackBox.h
src/motionDeblur/: motionDeblur.cpp  motionDeblur.h
src/targetTrack/: targetTrack.cpp  targetTrack.h
src/trackBox/: trackBox.cpp  trackBox.h
src/utils/: commandLine.h  mathHelpers.cpp  mathHelpers.h  pi.h
src/utils/filters/: filterClass.h  lowPassFilter.cpp  lowPassFilter.hpp
src/utils/fovCalc/: fovCalc.cpp  fovCalc.h
src/utils/i2c/: i2c.c
src/utils/pid/: pid.cpp  pid.h
src/utils/pid2/: pid2.cpp  pid2.h
src/utils/versionFileParser/: versionFileParser.cpp  versionFileParser.h
